# py-playwright

./: .dockerignore  .gitignore  README.md  conftest.py  dockerfile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
builds/tests/: index.html
builds/tests/13/: index.html
builds/tests/13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/13/widgets/: suites.json  (+7 more)
builds/tests/14/: index.html
builds/tests/15/: index.html
builds/tests/last-history/: history.json
constants/: __init__.py  browser_types.py  cli_config_commands.py  geolocation.py  heroku_constants.py  locale_and_timezone.py  saucedemo_constants.py  saucedemo_users.py  timeouts.py
pages/: __init__.py  base_page.py
pages/heroku_app_pages/: __init__.py  heroku_app_drag_and_drop_page.py  heroku_app_dynamic_controlls_page.py  heroku_home_page.py
pages/practice_pages/: practice_home_page.py
pages/saucedemo_pages/: saucedemo_base_page.py  saucedemo_login_page.py
project_utils/: __init__.py  browser_factory.py  logger.py  settings.py  test_data_info.py
testing_managers/: __init__.py  base_testing_manager.py  saucedemo_testing_manager.py
tests/: conftest.py  test_login.py
tests/tests_heroku_app/: conftest.py  test_drag_and_drop.py  test_dynamic_controls.py
tests/tests_heroku_app/test_cases/: heroku_cases.py
tests/tests_practice_home/: conftest.py  test_practice.py
tests/tests_practice_home/test_cases/: practice_cases.py
tests/tests_saucedemo/: conftest.py  test_login.py
tests/tests_saucedemo/test_cases/: login_cases.py
(+323 files in other folders)
